webapp/src/app/components/widgets/npc-states-widget/npc-states/npc-states.component.scss
@use '@angular/material' as mat;
@import "theme";

$accent: map-get($theme, accent);

.container {
	height: 100%;
}

.toolbar {
	padding-left: 32px;

	& button {
		margin: 0 8px;
	}
}

#groupTabGroup {
	&::ng-deep.mat-tab-label, &::ng-deep.mat-tab-label-active {
		min-width: 50px !important;
	}

	&::ng-deep.mat-tab-label-active {
		background: mat.get-color-from-palette($accent, 600);
	}

	&::ng-deep .mat-tab-body-wrapper {
		flex-grow: 1;
	}
}

.content {
	height: 100%;
}

.tab-content {
	flex-direction: column;
	min-height: 0;
}

.tab-content-inner {
	padding-left: 12px;
	padding-right: 12px;
	border-bottom: 1px solid mat.get-color-from-palette(mat.$gray-palette, 600);
	border-top: 1px solid mat.get-color-from-palette(mat.$gray-palette, 600);
}

.condition-label {
	margin: 0 10px;
}

.condition-icon {
	margin: 0 10px;
}

.content-left {
	margin: 10px;

	.select-input {
		height: 26px;

		option {
			background-color: mat.get-color-from-palette($accent, 800);
		}
	}

	.attribute {
		margin-bottom: 10px;
	}

	.pos-label {
		margin-right: 20px;
	}
}

.event-block {
	margin: 0 10px 0px 10px;
}

.middle-container {
	overflow: hidden;
}

.event-container {
	min-width: 0;
}

.warning-message {
	margin-bottom: 14px;
	& > mat-icon {
		color: orange;
		margin-right: 4px;
	}
}

